# CplexC-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Rearranjo-de-Genomas-Cplex-IP.files  Rearranjo-de-Genomas-Cplex-IP.includes  cmake_install.cmake  readme.txt
Modules/: FindCplex.cmake
code_dias2012/: README  dias2010_1_375.py  dias2010_1_5.py  dias_exec.py  elias2005.py  lagrange.py~
permutations/: generate_permutation.js  main.js  package.json
src/: arc.cpp  arc.h  example1.cpp  ilp.cpp  ilp.h  lagrange.cpp  lagrange.h  main.cpp  main_zanoni.cpp  model.cpp  model.h  model_flux.cpp  model_flux.cpp.autosave  model_flux.h  prob.cpp  solver.cpp  solver.h  t.cpp  t.h
