# NOME DO PROJETO
project(Cplex_Project)

set(CPLEX_ROOT_DIR "/opt/ibm/ILOG/CPLEX_Studio1261")

# VERSAO MINIMA DO CMAKE

cmake_minimum_required(VERSION 2.8)

# CXX_FLAGS - FLAGS DO COMPILADOR
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall -Wextra -std=c++11")
# ADICIONAR MODULES EXTERNOS - OPCIONAL.

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Modules)

# PROCURAR BIBLIOTECAS - OPCINAL
find_package(Cplex REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CPLEX_COMPILER_FLAGS}")
MESSAGE ("${CPLEX_COMPILER_FLAGS}")

# DIRETORIO DOS HEADERS DAS BIBLIOTECAS ACIMA
INCLUDE_DIRECTORIES( ${CPLEX_INCLUDE_DIRS})

# ACHAR OS .CPP E .H
file(GLOB_RECURSE SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
file(GLOB_RECURSE HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}  src/*.h)

# Linkar .cpp para este binário (que tem o nome do projeto)
add_executable(${PROJECT_NAME} ${HEADERS} ${SRCS})

# Linkar bibliotecas dinâmicas
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${CPLEX_LIBRARIES})
